# temprature_flow

./: .gitignore  client.py  config.json  main.py  pyproject.toml  setup.py
core/: calculation_module.py  config.py  interfaces.py  socket_adapter.py  ui_module.py
core/utils/: file_loader.py  file_writer.py  formater_util.py  get_model_util.py  logger.py  set_model.py  start_server.py
tests/: input_spec_2000.csv  result_data.json  test_calculations.py  test_formater.py  test_socket_adapter.py
